super-fenics/jitfailure-dolfin_expression_905dedb4400009d395ded8c60fc3871f/error.log
/tmp/tmp797l60va/dolfin_expression_905dedb4400009d395ded8c60fc3871f.cpp: In member function ‘virtual void dolfin::dolfin_expression_905dedb4400009d395ded8c60fc3871f::eval(Eigen::Ref<Eigen::Matrix<double, -1, 1> >, Eigen::Ref<const Eigen::Matrix<double, -1, 1> >) const’:
/tmp/tmp797l60va/dolfin_expression_905dedb4400009d395ded8c60fc3871f.cpp:61:36: error: ‘id_case’ was not declared in this scope
           values[0] = (func_u_exac(id_case));
                                    ^~~~~~~
/tmp/tmp797l60va/dolfin_expression_905dedb4400009d395ded8c60fc3871f.cpp:61:36: note: suggested alternative: ‘fd_mask’
           values[0] = (func_u_exac(id_case));
                                    ^~~~~~~
                                    fd_mask
/tmp/tmp797l60va/dolfin_expression_905dedb4400009d395ded8c60fc3871f.cpp:61:24: error: ‘func_u_exac’ was not declared in this scope
           values[0] = (func_u_exac(id_case));
                        ^~~~~~~~~~~
